[tool.poetry]
name = "fukuoka-de-longi-bot-layer"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]

[tool.black]
line-length = 120
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.flake8]
max-line-length = 120
ignore = ["E203","W503","W504"]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.7"
slackclient = "^2.5.0"

[tool.poetry.dev-dependencies]
awscli = "^1.18.6"
aws-sam-cli = "^0.43.0"
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
